syntax = "proto3";

package cart;

option go_package = "/cart";

service CartService {
  rpc AddItem(AddItemReq) returns (AddItemResp);
  rpc GetCart(GetCartReq) returns (GetCartResp);
  rpc EmptyCart(EmptyCartReq) returns (EmptyCartResp);
}

message CartItem {
  uint32 product_id = 1;
  uint32 quantity = 2;
}

message AddItemReq {
  uint32 user_id = 1;
  CartItem item = 2;
}

message AddItemResp {}

message GetCartReq {
  uint32 user_id = 1;
}

message GetCartResp {
  repeated CartItem items = 1;
}

message EmptyCartReq {
  uint32 user_id = 1;
}

message EmptyCartResp {}