syntax = "proto3";

package product;

option go_package = "/product";

service ProductCatalogService {
  rpc ListProducts(ListProductsReq) returns (ListProductsResp);
  rpc GetProduct(GetProductReq) returns (GetProductResp);
  rpc SearchProducts(SearchProductsReq) returns (SearchProductsResp);
  rpc CreateProduct(CreateProductReq) returns (CreateProductResp) {}
  rpc UpdateProduct(UpdateProductReq) returns (UpdateProductResp) {}
  rpc DeleteProduct(DeleteProductReq) returns (DeleteProductResp) {}
  rpc GetAllCategory(GetAllCategoryReq) returns (GetAllCategoryResp);
}

message ListProductsReq {
  int32 page = 1;
  int32 page_size = 2;
  string category_name = 3;
}

message Product {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;

  repeated string categories = 6;
}

message ListProductsResp {
  repeated Product products = 1;
}

message GetProductReq {
  uint32 id = 1;
}

message GetProductResp {
  Product product = 1;
}

message SearchProductsReq {
  string query = 1;
}

message SearchProductsResp {
  repeated Product results = 1;
}

message CreateProductReq {
  Product product = 1;
}

message CreateProductResp {
  uint32 id = 1;
}

message UpdateProductReq {
  uint32 id = 1;
  Product product = 2;
}

message UpdateProductResp {
  uint32 id = 1;
}

message DeleteProductReq {
  uint32 id = 1;
}

message DeleteProductResp {
  uint32 id = 1;
}

message GetAllCategoryResp {
  repeated string categories = 1;
}

message GetAllCategoryReq {
}